deploy/manifests/sample/workload-bob/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: appnet
spec:
  controllerName: gateway.azure.com/appnet-gateway.controller
---
apiVersion: v1
kind: Namespace
metadata:
  name: bob-demo
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bob-gw
  namespace: bob-demo
spec:
  gatewayClassName: appnet
  listeners:
  - name: http
    port: 80
    protocol: HTTP
